--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the statuses controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.page-header {
+	margin:20px 0 0;
+}
+.status {
+	border-bottom:1px solid #eee;
+	padding:1em 0.5em;
+	p {
+		margin-bottom:0px;
+	}
+	.admin {
+		display:none;
+	}
+}
+.status.hover {
+	background:#fafafa;
+	.admin {
+		display:inline;
+	}
+}
