--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,6 +39,9 @@
 	  </div><!-- /.navbar-collapse -->
 	</nav>
 	<div class="container">
+
+		<p class="notice"><%= notice %></p>
+       	<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
