--- a/app/assets/stylesheets/statuses.css.scss
+++ b/app/assets/stylesheets/statuses.css.scss
@@ -3,7 +3,8 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 .page-header {
-	margin:20px 0 0;
+	margin:20px 0;
+	border-bottom:1px solid #ddd;
 }
 .status {
 	border-bottom:1px solid #eee;
