--- a/app/views/statuses/show.html.erb
+++ b/app/views/statuses/show.html.erb
@@ -1,12 +1,10 @@
-<p id="notice"><%= notice %></p>
+<div class="alert alert-success"><%= notice %></div>
 
 <p>
-  <strong>Name:</strong>
-  <%= @status.name %>
+  <%= @status.user %>
 </p>
 
 <p>
-  <strong>Content:</strong>
   <%= @status.content %>
 </p>
 
