--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,27 +1,20 @@
-<h2>Sign up</h2>
+<div class="row">
+  <div class="col-md-4"></div>  
+  <div class="col-md-4 well">
+    <legend>Sign up</legend>
+      <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+        
+        <%= f.input :first_name %>
+        <%= f.input :last_name %>
+        <%= f.input :profile_name %>
+        <%= f.input :email %>
+        <%= f.input :password %>
+        <%= f.input :password_confirmation %>
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+        <div><%= f.button :submit, "Sign up", :class => 'btn btn-success' %></div>
+      <% end %>
 
-  <div><%= f.label :first_name %><br />
-  <%= f.text_field :first_name, :autofocus => true %></div>
-
-  <div><%= f.label :last_name %><br />
-  <%= f.text_field :last_name, :autofocus => true %></div>
-
-  <div><%= f.label :profile_name %><br />
-  <%= f.text_field :profile_name, :autofocus => true %></div>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
+  </div>
+  <div class="col-md-4"></div>
+</div>
