--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>StatusUpdates</title>
+  <title>SitDown</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
@@ -17,31 +17,33 @@
 	      <span class="icon-bar"></span>
 	      <span class="icon-bar"></span>
 	    </button>
-	    <a class="navbar-brand" href="#">Status Updater</a>
+	    <%= link_to "SitDown", statuses_path, :class => 'navbar-brand' %>
 	  </div>
 
 	  <!-- Collect the nav links, forms, and other content for toggling -->
 	  <div class="collapse navbar-collapse navbar-ex1-collapse">
 	    <ul class="nav navbar-nav">
-	      <li><a href="#">Today</a></li>
-	      <li><a href="#">All Statuses</a></li>
+	      <li><%= link_to "All Statuses", statuses_path %></li>
+	      <li><%= link_to "Post a New Status", new_status_path %></li>
 	    </ul>
 	   
 	    <ul class="nav navbar-nav navbar-right">
-	      <li class="dropdown">
-	        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Name Goes Here <b class="caret"></b></a>
-	        <ul class="dropdown-menu">
-	          <li><a href="#">My Account</a></li>
-	          <li><a href="#">Logout</a></li>
-	        </ul>
-	      </li>
+	      <% if user_signed_in? %>
+		      <li class="dropdown">
+		        <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.profile_name %> <b class="caret"></b></a>
+		        <ul class="dropdown-menu">
+		          <li><%= link_to "My Account", edit_user_registration_path %></li>
+		          <li><%= link_to "Log out", destroy_user_session_path, :method => :delete %></li>
+		        </ul>
+		      </li>
+	      <% else %>
+	      	<li><%= link_to "Sign Up", new_user_registration_path %></li>
+	      	<li><%= link_to "Sign In", new_user_session_path %></li>
+	      <% end %>
 	    </ul>
 	  </div><!-- /.navbar-collapse -->
 	</nav>
 	<div class="container">
-
-		<p class="notice"><%= notice %></p>
-       	<p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
