--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@status) do |f| %>
+<%= simple_form_for(@status) do |f| %>
   <% if @status.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@status.errors.count, "error") %> prohibited this status from being saved:</h2>
@@ -11,15 +11,10 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="form-group">
-    <%= f.label :content %><br>
-    <%= f.text_area :content %>
+    <div class="form-group">
+    <%= f.input :content, label: "In a few words, tell us what you've been up to", :class => 'form-control' %>
   </div>
   <div class="actions">
-    <%= f.submit 'Create Status', :class => 'btn btn-default' %>
+    <%= f.button :submit, :class => 'btn btn-success' %>
   </div>
 <% end %>
