--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,12 +1,13 @@
 <div class="page-header"> 
-  <h1>All Statuses</h1>
+  <h1>What is everyone working on?</h1>
 </div>
 
 <%= link_to "Post a New Update", new_status_path, class: "btn btn-success" %>
 
+
 <% @statuses.each do |status| %>
   <div class="status">
-    <strong><%= status.name %></strong>
+    <strong><%= status.user %></strong>
     <p><%= status.content %></p>
     <div class="meta">
       <%= link_to time_ago_in_words(status.created_at) + " ago", status %>
